Adds test documenting upstream bug in SDKMAN!
cf. issue #10

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,4 +47,5 @@ script:
   - fish test/wrapper.fish
   - fish test/reinitialize.fish
   - fish -c "sdk install crash 1.3.0; and sdk uninstall crash 1.3.0" > /dev/null && fish test/check_for_path_zombies.fish
+  - sdk install crash 1.3.0; and sdk uninstall crash 1.3.0; and fish test/check_for_path_zombies.fish
   - bash test/remove_sdkman.sh > /dev/null && fish -c "echo 'y' | sdk" > /dev/null && fish -c "sdk version"
